# diffduel

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: api-ci.yml  deploy.yml  realtime-ci.yml  web-ci.yml  workers-ci.yml
apps/admin/: Dockerfile  env.d.ts  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/admin/src/: App.tsx  main.tsx  router.tsx
apps/admin/src/auth/: AccessDenied.tsx  AuthContext.tsx  LoginPage.tsx  RequireAdmin.test.tsx  RequireAdmin.tsx
apps/admin/src/pages/: DashboardPage.tsx  FlagsPage.tsx  OverviewPage.tsx
apps/admin/src/styles/: global.css
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_profile_indexes.py  0003_feature_flags.py  0004_email_verification.py  0005_daily_challenges.py  0006_ai_reviews.py  0007_tournaments.py  0008_telegram_accounts.py
apps/api/seeds/: tasks_javascript.json  tasks_python.json  tasks_sql.json  topics.json
apps/api/src/: create_admin.py  leaderboard_rebuild.py  main.py  seeds.py
apps/api/src/admin/: flags_cache.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/ai_review/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/auth/: cookies.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/billing/: dependencies.py  models.py  repository.py  schemas.py  service.py
apps/api/src/billing/providers/: __init__.py  base.py  manual.py
apps/api/src/core/: avatars.py  config.py  db.py  db_types.py  email.py  enums.py  errors.py  events.py  exception_handlers.py  logging.py  middleware.py  models_registry.py  rate_limit.py  redis.py  s3.py  security.py  telemetry.py
apps/api/src/daily/: __init__.py  keys.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/duels/: elo.py  models.py  repository.py  schemas.py  service.py
apps/api/src/internal_api/: dependencies.py  router.py
apps/api/src/leaderboard/: keys.py  repository.py  router.py  schemas.py  service.py
apps/api/src/tasks/: checker.py  repository.py  router.py  schemas.py  service.py
apps/api/src/telegram/: models.py  repository.py  router.py  schemas.py  service.py  widget.py
apps/api/src/topics/: models.py  repository.py  router.py  schemas.py
apps/api/src/tournaments/: admin_router.py  admin_service.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/users/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/tests/: conftest.py  test_admin.py  test_ai_review.py  test_auth_flow.py  test_avatars.py  test_billing_pro.py  test_daily.py  test_duels_internal.py  test_elo.py  test_email_verification.py  test_leaderboard.py  test_profile.py  test_rate_limit.py  test_security.py  test_tasks_solo.py  test_telegram.py  test_topics_internal.py  test_tournaments.py
apps/realtime/: Dockerfile  README.md  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/realtime/src/: app.module.ts  main.ts  telemetry.ts
apps/realtime/src/auth/: auth.module.ts  token.service.ts
apps/realtime/src/common/: json.logger.ts  keys.ts  types.ts
apps/realtime/src/config/: app-config.service.ts  config.module.ts  env.schema.ts
apps/realtime/src/duel/: duel-emitter.interface.ts  duel-engine.service.ts  duel-state.repository.ts  duel.module.ts  duel.service.ts  lua-scripts.ts  scoring.ts
apps/realtime/src/events/: events.service.ts
apps/realtime/src/gateway/: duel.gateway.ts  emitter.module.ts  gateway.module.ts  redis-io.adapter.ts  socket-emitter.service.ts
apps/realtime/src/health/: health.controller.ts
apps/realtime/src/internal-client/: internal-client.interface.ts  internal-client.module.ts  internal-client.service.ts  internal-client.types.ts
apps/realtime/src/matchmaking/: elo-cache.service.ts  lua-scripts.ts  matchmaking-elo.module.ts  matchmaking.dto.ts  matchmaking.module.ts  matchmaking.service.ts
apps/realtime/src/redis/: redis.constants.ts  redis.module.ts
apps/realtime/test/: duel-e2e.spec.ts  duel-engine.spec.ts  duel-reconnect.spec.ts  elo-cache.spec.ts  lua-pairing.spec.ts
apps/realtime/test/helpers/: fakes.ts  redis.ts
apps/web/: Dockerfile  env.d.ts  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.sw.json  vite.config.ts  vitest.config.ts
apps/web/public/: manifest.webmanifest  offline.html  robots.txt  sitemap.xml
apps/web/src/: App.vue  main.ts  sw.ts
apps/web/src/components/: AppNav.vue  Paywall.vue  TabBar.vue
apps/web/src/composables/: useAiReview.test.ts  useAiReview.ts  useDailyChallenge.test.ts  useDailyChallenge.ts  useDuel.test.ts  useDuel.ts  useTournamentSession.test.ts  useTournamentSession.ts  useTrainingSession.test.ts  (+1 more)
apps/workers/: .env.example  Dockerfile  README.md  pyproject.toml
apps/workers/assets/fonts/: LICENSE.md
apps/workers/src/workers/: __init__.py  ai_review.py  config.py  events.py  image_gen.py  internal_client.py  logging.py  render.py  storage.py  telemetry.py
apps/workers/tests/: conftest.py  test_ai_review.py  test_config.py  test_events.py  test_image_gen.py  test_render.py
base_/: TZ_DiffDuel.md
docs/adr/: 0001-baseline-architecture.md  0002-profile-stats.md  0003-deploy-and-backups.md  0004-observability.md
docs/ai-log/: 2026-06-12-этап-0-1.md  2026-06-13-этап-2.md  2026-06-13-этап-3.md  2026-06-13-этап-4.md
docs/specs/: TZ_design_code.md  TZ_design_final_pass.md  ai-review.md  conventions.md  duels.md  email-verification.md  leaderboards-admin.md  release2.md  release3-misc.md  tournaments.md
infra/compose/: .env.prod.example  compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
infra/deploy/: RUNBOOK.md
infra/load/k6/: README.md  answers_load.js  duel_ws.js  http_smoke.js
(+56 files in other folders)
