[project]
name = "diffduel-api"
version = "0.1.0"
description = "DiffDuel Core API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "pydantic[email]>=2.9",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "redis>=5.2",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# B008: вызов Depends()/Header() в дефолтах аргументов — штатный паттерн FastAPI.
"src/**/router.py" = ["B008"]
"src/**/dependencies.py" = ["B008"]
"src/core/rate_limit.py" = ["B008"]
# Тесты используют assert (S101) и поднимают тестовые секреты (S105/S106/S311).
"tests/**" = ["S101", "S105", "S106", "S311"]
# В миграциях допустим raw SQL и длинные строки DDL.
"migrations/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
# alembic env импортирует динамически сгенерированный config-объект.
module = "migrations.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
