[project]
name = "diffduel-api"
version = "0.1.0"
description = "DiffDuel Core API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "pydantic[email]>=2.9",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "redis>=5.2",
    "structlog>=24.4",
    "aioboto3>=13.0",
    "aiokafka>=0.12",
    "aiosmtplib>=5.1.1",
    "sentry-sdk>=2.18",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-aiokafka>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "types-aiobotocore-s3>=3.7.0",
    "botocore-stubs>=1.43.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# B008: вызов Depends()/Header() в дефолтах аргументов — штатный паттерн FastAPI.
"src/**/router.py" = ["B008"]
"src/**/admin_router.py" = ["B008"]
"src/**/dependencies.py" = ["B008"]
"src/core/rate_limit.py" = ["B008"]
# Тесты используют assert (S101) и поднимают тестовые секреты (S105/S106/S311).
"tests/**" = ["S101", "S105", "S106", "S311"]
# В миграциях допустим raw SQL и длинные строки DDL.
"migrations/**" = ["E501"]
# HTML-шаблон письма содержит длинные строки разметки — переносить их вредно.
"src/core/email.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
# alembic env импортирует динамически сгенерированный config-объект.
module = "migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
# у aioboto3 нет стабов и py.typed; типизацию даёт types-aiobotocore-s3.
module = "aioboto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# у aiokafka нет стабов/py.typed; продюсер — тонкая best-effort обёртка.
module = "aiokafka.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "s3: тесты против реального MinIO (S3); пропускаются, если эндпоинт недоступен",
    "kafka: тесты против реального брокера (Redpanda); пропускаются без брокера",
]
