[project]
name = "diffduel-workers"
version = "0.1.0"
description = "DiffDuel background workers (image-gen share-cards)"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12",
    "anthropic>=0.45",
    "pillow>=11.0",
    "aioboto3>=13.0",
    "pydantic-settings>=2.6",
    "pydantic>=2.9",
    "structlog>=24.4",
    "httpx>=0.28",
    "sentry-sdk>=2.18",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-httpx>=0.50b0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "types-aiobotocore-s3>=3.7.0",
    "botocore-stubs>=1.43.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Тесты используют assert (S101) и тестовые секреты (S105/S106/S311).
"tests/**" = ["S101", "S105", "S106", "S311"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
# у aioboto3 нет стабов и py.typed; типизацию даёт types-aiobotocore-s3.
module = "aioboto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# у aiokafka нет стабов/py.typed; консьюмер — тонкая обёртка.
module = "aiokafka.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "kafka: тесты против реального брокера (Redpanda); пропускаются без брокера",
    "s3: тесты против реального MinIO (S3); пропускаются, если эндпоинт недоступен",
]
